[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-htmlayout"
version = "0.9.1"
authors = [
  { name="Steve Kossouho", email="noreply@example.com" },
]
description = "Build HTML layouts in Dash with HTML"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build]
packages = ["src/dash", "src/dash/htmlayout"]
