[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-htmlayout"
version = "1.0.2"
authors = [
  { name="Steve Kossouho", email="noreply@example.com" },
]
description = "Build HTML layouts in Dash with HTML"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "dash >= 2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/artscoop/dash-htmlayout"
"Documentation" = "https://artscoop.github.io/dash-htmlayout/htmlayout.html"
"Bug Tracker" = "https://github.com/artscoop/dash-htmlayout/issues"

[tool.hatch.build]
packages = ["src/dash", "src/dash/htmlayout"]

[tool.pylint.TYPECHECK]
ignored-modules= ["numpy", "lxml"]

[tool.pylint.'MESSAGES CONTROL']
disable=["import-error", "no-name-in-module"]
